--- a/CoePerformanceSpreadSheet/frontend/package.json
+++ b/CoePerformanceSpreadSheet/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rfq-frontend",
   "version": "1.0.0",
-  "description": "React frontend for RFQ system",
+  "description": "React frontend for Performance Spread Sheet",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
