sigma 5 feed working regen inertia and time

--- a/CoePerformanceSpreadSheet/backend/routes/feeds/physics/allen_bradley_model_config.json
+++ b/CoePerformanceSpreadSheet/backend/routes/feeds/physics/allen_bradley_model_config.json
@@ -109,7 +109,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "H30_5M_25_MPB": {
                 "o_dia": 1.190,
@@ -118,6 +118,12 @@
                 "density": 0.283,
                 "qty": 1,
                 "lbs": 0,
+                "inertia": 0,
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
                 "inertia": 0,
                 "ratio": 0
             }
@@ -231,7 +237,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "H30_5M_25_MPB": {
                 "o_dia": 1.190,
@@ -240,6 +246,12 @@
                 "density": 0.283,
                 "qty": 1,
                 "lbs": 0,
+                "inertia": 0,
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
                 "inertia": 0,
                 "ratio": 0
             }
@@ -373,7 +385,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "W28_8M_22_QT": {
                 "o_dia": 3.150,
@@ -383,7 +395,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "l_drive_bush": {
                 "o_dia": 2.500,
@@ -393,7 +405,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "QT:24mm_bore": {
                 "o_dia": 1.625,
@@ -402,6 +414,12 @@
                 "density": 0.283,
                 "qty": 1,
                 "lbs": 0,
+                "inertia": 0,
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
                 "inertia": 0,
                 "ratio": 0
             }
@@ -535,7 +553,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "W28_8M_22_QT": {
                 "o_dia": 3.150,
@@ -545,7 +563,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "l_drive_bush": {
                 "o_dia": 2.500,
@@ -555,7 +573,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "QT:24mm_bore": {
                 "o_dia": 1.625,
@@ -564,6 +582,12 @@
                 "density": 0.283,
                 "qty": 1,
                 "lbs": 0,
+                "inertia": 0,
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
                 "inertia": 0,
                 "ratio": 0
             }
@@ -697,7 +721,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "W28_8M_22_QT": {
                 "o_dia": 3.150,
@@ -707,7 +731,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "l_bush": {
                 "o_dia": 2.500,
@@ -717,7 +741,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "QT:24mm_bore": {
                 "o_dia": 1.625,
@@ -726,6 +750,12 @@
                 "density": 0.283,
                 "qty": 1,
                 "lbs": 0,
+                "inertia": 0,
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
                 "inertia": 0,
                 "ratio": 0
             }
@@ -859,7 +889,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "W28_8M_22_QT": {
                 "o_dia": 2.000,
@@ -869,7 +899,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "l_bush": {
                 "o_dia": 2.687,
@@ -879,7 +909,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "QT:38mm_bore": {
                 "o_dia": 1.654,
@@ -888,6 +918,12 @@
                 "density": 0.283,
                 "qty": 1,
                 "lbs": 0,
+                "inertia": 0,
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
                 "inertia": 0,
                 "ratio": 0
             }
@@ -1021,7 +1057,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "W28_8M_22_QT": {
                 "o_dia": 2.750,
@@ -1031,7 +1067,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "l_bush": {
                 "o_dia": 2.687,
@@ -1041,7 +1077,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "QT:38mm_bore": {
                 "o_dia": 1.871,
@@ -1050,6 +1086,12 @@
                 "density": 0.283,
                 "qty": 1,
                 "lbs": 0,
+                "inertia": 0,
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
                 "inertia": 0,
                 "ratio": 0
             }
@@ -1193,6 +1235,12 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
+                "ratio": 0
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
+                "inertia": 0.008,
                 "ratio": 0
             }
         },
@@ -1345,7 +1393,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
             },
             "P30_8M_50": {
                 "o_dia": 2.406,
@@ -1355,7 +1403,13 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 1
+            },
+            "g_box": {
+                "efficiency": 1,
+                "qty": 0,
+                "inertia": 0,
+                "ratio": 1
             }
         },
         "600_AB_MPL": {
@@ -1527,7 +1581,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "l_pul_2": {
                 "o_dia": 6.250,
@@ -1537,7 +1591,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "14M-43-68": {
                 "o_dia": 6.000,
@@ -1547,7 +1601,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "14M-43-68_2": {
                 "o_dia": 3.840,
@@ -1557,7 +1611,13 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
+            },
+            "g_box": {
+                "efficiency": 0.97,
+                "qty": 1,
+                "inertia": 0.012,
+                "ratio": 5
             }
         },
         "600_AB_MPL-B680P": {
@@ -1729,7 +1789,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "l_pul_2": {
                 "o_dia": 6.250,
@@ -1739,7 +1799,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "14M-43-68": {
                 "o_dia": 6.000,
@@ -1749,7 +1809,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "14M-43-68_2": {
                 "o_dia": 3.840,
@@ -1759,7 +1819,13 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
+            },
+            "g_box": {
+                "efficiency": 0.97,
+                "qty": 1,
+                "inertia": 0.021,
+                "ratio": 5
             }
         },
         "700_AB_MPL": {
@@ -1941,7 +2007,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "l_drive_sheave_2": {
                 "o_dia": 6.250,
@@ -1951,7 +2017,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "14M-36-68": {
                 "o_dia": 6.000,
@@ -1961,7 +2027,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "14M-36-68_2": {
                 "o_dia": 3.840,
@@ -1971,7 +2037,13 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
+            },
+            "g_box": {
+                "efficiency": 0.97,
+                "qty": 1,
+                "inertia": 0.056,
+                "ratio": 5
             }
         },
         "800_AB_MPL": {
@@ -2163,7 +2235,7 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
             },
             "14M-36-68": {
                 "o_dia": 4.310,
@@ -2173,7 +2245,13 @@
                 "qty": 1,
                 "lbs": 0,
                 "inertia": 0,
-                "ratio": 0
+                "ratio": 5
+            },
+            "g_box": {
+                "efficiency": 0.97,
+                "qty": 1,
+                "inertia": 0.056,
+                "ratio": 5
             }
         }
     }
